# ros2-create-qt6-pkg

./: README.md  create_pkg.sh  install.sh
templates/: CMakeLists.txt  package.xml
templates/include/: qnode.hpp
templates/src/: main.cpp  mainwindow.cpp  qnode.cpp
templates/ui/: mainwindow.ui
